--- a/src/Zio.GitFileSystem/Zio.GitFileSystem.csproj
+++ b/src/Zio.GitFileSystem/Zio.GitFileSystem.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,17 +12,15 @@
     <PackageReleaseNotes>https://github.com/xoofx/zio/blob/master/changelog.md</PackageReleaseNotes>
     <PackageTags>filesystem;vfs;VirtualFileSystem;virtual;abstract;directory;files;io;mock;git;gvfs;</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <Version>0.1.0</Version>
+    <AssemblyVersion>0.1.7.0</AssemblyVersion>
+    <FileVersion>0.1.7.0</FileVersion>
+    <Version>0.1.7</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.25.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Zio\Zio.csproj" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
+    <PackageReference Include="Zio" Version="0.7.3" />
   </ItemGroup>
 
 </Project>
